cbits/Bullet.h

void btStorageResult_addContactPoint(void *c,float* p0,float* p1,float p2); //method: addContactPoint void ( ::btStorageResult::* )( ::btVector3 const &,::btVector3 const &,::btScalar ) 
void btStorageResult_m_normalOnSurfaceB_set(void *c,float* a); //attribute: ::btVector3 btStorageResult->m_normalOnSurfaceB
void btStorageResult_m_normalOnSurfaceB_get(void *c,float* a);
void btStorageResult_m_closestPointInB_set(void *c,float* a); //attribute: ::btVector3 btStorageResult->m_closestPointInB
void btStorageResult_m_closestPointInB_get(void *c,float* a);
void btStorageResult_m_distance_set(void *c,float a); //attribute: ::btScalar btStorageResult->m_distance
float btStorageResult_m_distance_get(void *c); //attribute: ::btScalar btStorageResult->m_distance
void* btSubSimplexClosestResult_new(); //constructor: btSubSimplexClosestResult  ( ::btSubSimplexClosestResult::* )(  ) 
void btSubSimplexClosestResult_free(void *c);
 
void btSubSimplexClosestResult_reset(void *c); //method: reset void ( ::btSubSimplexClosestResult::* )(  ) 
int btSubSimplexClosestResult_isValid(void *c); //method: isValid bool ( ::btSubSimplexClosestResult::* )(  ) 
void btSubSimplexClosestResult_setBarycentricCoordinates(void *c,float p0,float p1,float p2,float p3); //method: setBarycentricCoordinates void ( ::btSubSimplexClosestResult::* )( ::btScalar,::btScalar,::btScalar,::btScalar ) 
void btSubSimplexClosestResult_m_closestPointOnSimplex_set(void *c,float* a); //attribute: ::btVector3 btSubSimplexClosestResult->m_closestPointOnSimplex
void btSubSimplexClosestResult_m_closestPointOnSimplex_get(void *c,float* a);
void btSubSimplexClosestResult_m_usedVertices_set(void *c,void* a); //attribute: ::btUsageBitfield btSubSimplexClosestResult->m_usedVertices
void* btSubSimplexClosestResult_m_usedVertices_get(void *c); //attribute: ::btUsageBitfield btSubSimplexClosestResult->m_usedVertices
// attribute not supported: //attribute: ::btScalar[4] btSubSimplexClosestResult->m_barycentricCoords
void btSubSimplexClosestResult_m_degenerate_set(void *c,int a); //attribute: bool btSubSimplexClosestResult->m_degenerate
int btSubSimplexClosestResult_m_degenerate_get(void *c); //attribute: bool btSubSimplexClosestResult->m_degenerate
void* btUsageBitfield_new(); //constructor: btUsageBitfield  ( ::btUsageBitfield::* )(  ) 
void btUsageBitfield_free(void *c);
 
void btUsageBitfield_reset(void *c); //method: reset void ( ::btUsageBitfield::* )(  ) 
void btUsageBitfield_unused1_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->unused1
short unsigned int btUsageBitfield_unused1_get(void *c); //attribute: short unsigned int btUsageBitfield->unused1
void btUsageBitfield_unused2_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->unused2
short unsigned int btUsageBitfield_unused2_get(void *c); //attribute: short unsigned int btUsageBitfield->unused2
void btUsageBitfield_unused3_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->unused3
short unsigned int btUsageBitfield_unused3_get(void *c); //attribute: short unsigned int btUsageBitfield->unused3
void btUsageBitfield_unused4_set(void *c,short unsigned int a); //attribute: short unsigned int btUsageBitfield->unused4
short unsigned int btUsageBitfield_unused4_get(void *c); //attribute: short unsigned int btUsageBitfield->unused4